--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
   build:
     runs-on: [ubuntu-latest]
     steps:
+      - uses: actions/checkout@v3
       - name: Deploy Bicep template
         uses: muskanlnu/lemonlime-re-workflow/blob/main/.github/workflows/deploy-reusable.yml@main
         with:
