--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,10 @@ jobs:
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
-      - name: Deploy Bicep template
-        uses: muskanlnu/lemonlime-re-workflow/blob/main/.github/workflows/deploy-reusable.yml@main
-        with:
-          RESOURCE_GROUP: ${{inputs.RESOURCE_GROUP}}
+      
+  deploy: 
+    uses: muskanlnu/lemonlime-re-workflow/blob/main/.github/workflows/deploy-reusable.yml@main
+    with :
+        RESOURCE_GROUP: ${{inputs.RESOURCE_GROUP}}
+    
         
